[package]
name = "dynamization"
version = "0.4.0"
authors = ["arbrk1"]
edition = "2018"
license = "MIT"
description = 'Fast insertion for static containers.'
readme = "README.md"
repository = "https://github.com/arbrk1/dynamization-rs/"
keywords = ["data", "containers"]
categories = ["data-structures"]


[dependencies]

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[features]
sorted_vec = []
default = []


[[bench]]
name = "pqueue"
harness = false
required-features = ["sorted_vec"]

[[bench]]
name = "svmap"
harness = false
required-features = ["sorted_vec"]

[[test]]
name = "svqueue"
required-features = ["sorted_vec"]



